--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,35 @@
   <head>
     <meta charset="utf-8" />
     <title>GitLab API UI</title>
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type='image/png' sizes="16x16" href="./media/favicon-16x16.png"/>
+    <link rel="icon" type='image/png' sizes="32x32" href="./media/favicon-32x32.png"/>
+    <link rel="icon" type='image/png' sizes="96x96" href="./media/favicon-96x96.png"/>
+
+    <link rel="android-touch-icon" type='image/png' sizes="144x144" href="./media/android-icon-144x144.png"/>
+    <link rel="android-touch-icon" type='image/png' sizes="192x192" href="./media/android-icon-192x192.png"/>
+    <link rel="android-touch-icon" type='image/png' sizes="36x36" href="./media/android-icon-36x36.png"/>
+    <link rel="android-touch-icon" type='image/png' sizes="48x48" href="./media/android-icon-48x48.png"/>
+    <link rel="android-touch-icon" type='image/png' sizes="72x72" href="./media/android-icon-72x72.png"/>
+    <link rel="android-touch-icon" type='image/png' sizes="96x96" href="./media/android-icon-96x96.png"/>
+
+    <link rel="apple-touch-icon" type='image/png' sizes="114x114" href="./media/apple-icon-114x114.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="120x120" href="./media/apple-icon-120x120.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="144x144" href="./media/apple-icon-144x144.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="152x152" href="./media/apple-icon-152x152.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="180x180" href="./media/apple-icon-180x180.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="57x57" href="./media/apple-icon-57x57.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="60x60" href="./media/apple-icon-60x60.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="72x72" href="./media/apple-icon-72x72.png"/>
+    <link rel="apple-touch-icon" type='image/png' sizes="76x76" href="./media/apple-icon-76x76.png"/>
+    <link rel="apple-touch-icon" type='image/png' href="./media/apple-icon-precomposed.png"/>
+    <link rel="apple-touch-icon" type='image/png' href="./media/apple-icon.png"/>
+
+    <meta name="msapplication-TileImage" content="./media/ms-icon-144x144.png"/>
+    <meta name="msapplication-TileImage" content="./media/ms-icon-150x150.png"/>
+    <meta name="msapplication-TileImage" content="./media/ms-icon-310x310.png"/>
+    <meta name="msapplication-TileImage" content="./media/ms-icon-70x70.png"/>
+
   </head>
   <body>
     <div id="root"></div>
